[package]
name = "rowdytime"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
encoding_rs = "0.8.35"
md5 = "0.7.0"
mysql = "26.0.0"
percent-encoding = "2.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
rust-ini = "0.21.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
yaserde = { version = "0.12.0", features = ["derive"] }
# mysql = "20.1" # Or latest version
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", features = ["json"] }
# #fs = "7.0"
# #ini = "0.4"
# serde_json = "1.0" # For JSON parsing if needed

[[bin]]
name = "rowdytime"
path = "main.rs"
